--- a/todolist.html
+++ b/todolist.html
@@ -182,7 +182,7 @@
                 butchange.innerText = 'Delete Task';
                 const done = document.createElement("div");
                 done.className = "donetick";
-                done.innerHTML = '<img class="donetick" src="mark.png">';
+                done.innerHTML = '<img class="donetick" src="https://cdn-icons-png.flaticon.com/128/711/711239.png">';
 
                 if (task.done) newpost2.innerHTML = `<del>${task.text}</del>`;
 
